<resources>
    <string name="app_name">MindShaper</string>
    <string name="common_foobar">""</string>
    <string name="common_thought_draft_not_found">No draft available</string>
    <string name="common_in_folder">w folderze</string>
    <string name="common_btn_save">Zapisz</string>
    <string name="common_btn_cancel">Anuluj</string>
    <string name="common_btn_confirm_ok">OK</string>
    <string name="common_btn_add">\?</string>
    <string name="common_btn_create">+</string>
    <string name="common_btn_increase">+</string>
    <string name="common_btn_decrease">-</string>
    <string name="common_btn_grant_permission">Zezwól</string>
    <string name="common_btn_confirm_replace">Zastąp dane</string>
    <string name="common_btn_go_to_settings">Przejdź do Ustawień</string>
    <string name="common_guide_btn_next">Mów dalej...</string>
    <string name="common_guide_btn_dismiss">Dzięki</string>
    <string name="common_info_changes_saved">Zmiany zostały zapisane</string>
    <string name="common_deletion_dialog_confirmation">%s usunięto</string>
    <string name="common_deletion_dialog_warning">Tego nie da się cofnąć.</string>
    <string name="common_deletion_dialog_thought_title">Usunąć myśl?</string>
    <string name="common_deletion_dialog_thought_message">Zniknie razem ze wszystkimi formami zapisu. Tego nie da się cofnąć.</string>
    <string name="common_deletion_dialog_thought_yes">Usuń myśl</string>
    <string name="common_edit_note_header">Edytuj notatkę</string>
    <string name="common_list_dialog_title">Wybierz coś sobie…</string>
    <string name="common_thoughts_forms_inactive_header">Włączyć nową formę zapisu?</string>
    <string name="common_thoughts_forms_permissions_needed">Nagrania i zdjęcia włączysz w Ustawieniach.</string>
    <string name="common_dialog_open_android_settings">Otwórz ustawienia Androida</string>
    <string name="common_object_type_thought">Myśl</string>
    <string name="common_unit_hours">godz.</string>
    <string name="common_unit_days">dni</string>
    <string name="common_thought_age_pattern">Złapano %s dni temu</string>
    <string name="common_thought_age_0">Dzisiaj złapano</string>
    <string name="common_thought_age_1">Wczoraj złapano</string>
    <string name="common_thought_age_level_1_icon">🌱</string>
    <string name="common_thought_age_level_2_icon">🍀</string>
    <string name="common_thought_age_level_3_icon">🌿</string>
    <string name="common_thought_age_level_4_icon">🌾</string>
    <string name="common_thought_age_level_5_icon">🌴</string>
    <string name="common_thought_updated_at_0">Zmieniono dziś</string>
    <string name="common_thought_updated_at_1">Zmieniono wczoraj</string>
    <string name="common_thought_updated_at_pattern">Zmieniono %s dni temu</string>
    <string name="common_placeholder_accessibility_content_desc">PLACEHOLDER</string>
    <string name="common_hex_tags_dialog_header">Tagowanie</string>
    <string name="common_hex_tags_similar_title">Użyć istniejącego tagu?</string>
    <string name="common_hex_tags_similar_description">Masz już podobny tag [%1$s].</string>
    <string name="common_hex_tags_similar_use">Użyj [%1$s]</string>
    <string name="common_hex_tags_similar_keep_mine">Utwórz nowy tag</string>
    <string name="common_hex_tags_hint_person">Osoba lub Ekipa</string>
    <string name="common_hex_tags_hint_project">Projekt lub Zajawka</string>
    <string name="common_hex_tags_add_tag_content_desc">Dodaj tag</string>
    <string name="common_hex_tag_hint_subject">Temat</string>
    <string name="common_hex_tags_label_domain">| Domena</string>
    <string name="common_hex_tags_subject_prefix">"⧽  %s"</string>
    <string name="common_subject_error_chars_exceeded">Temat nie może przekroczyć %s znaków…</string>
    <string name="common_hex_tag_error_chars_exceeded">Pojedynczy tag nie może mieć więcej niż %s znaków…</string>
    <string name="files_audio_error_file_not_accessible">Plik audio nie jest już dostępny</string>
    <string name="files_audio_error_reading">Błąd odczytu pliku audio</string>
    <string name="files_error_cannot_open_file_picker">Nie można otworzyć selektora plików</string>
    <string name="files_error_selecting_file">Błąd podczas wyboru pliku</string>
    <string name="files_audio_error_unknown_file">Nieznany plik audio</string>
    <string name="files_error_unknown_file">Nieznany plik</string>
    <string name="files_state_no_file_selected">Nie wybrano pliku</string>
    <string name="photos_removing_header">Usunąć zdjęcie?</string>
    <string name="photos_removing_yes">Usuń zdjęcie</string>
    <string name="photos_no_file">Brakuje tutaj zdjęcia…</string>
    <string name="photos_loading_error">Coś się wyburaczyło przy ładowaniu zdjęcia…</string>
    <string name="flashcards_title">Zapamiętywanie</string>
    <string name="flashcards_sets_empty">Nie masz jeszcze żadnego zestawu fiszek…
Dodaj pierwszy przyciskiem +</string>
    <string name="flashcards_set_no_flashcards">Ten zestaw nie ma jeszcze fiszek</string>
    <string name="flashcards_create_header">Nowy zestaw fiszek</string>
    <string name="flashcards_edit_header">Edycja zestawu fiszek</string>
    <string name="flashcards_set_name_hint">Nazwa zestawu</string>
    <string name="flashcards_front_hint">Awers (pytanie)</string>
    <string name="flashcards_back_hint">Rewers (odpowiedź)</string>
    <string name="flashcards_row_label">Fiszka #%1$d</string>
    <string name="flashcards_error_no_name">Zestaw potrzebuje nazwy</string>
    <string name="flashcards_error_incomplete">Każda fiszka potrzebuje awersu i rewersu</string>
    <string name="flashcards_error_incomplete_single">Fiszka potrzebuje awersu i rewersu</string>
    <string name="flashcards_new_header">Nowa fiszka #%1$d</string>
    <string name="flashcards_added_count">Dodano: %1$d</string>
    <string name="flashcards_btn_add_next">Dodaj kolejną</string>
    <string name="flashcards_btn_finish">Zakończ</string>
    <string name="flashcards_btn_create_set">Utwórz</string>
    <string name="flashcards_set_name_with_count">%1$s (%2$d)</string>
    <string name="flashcards_end_title">Wszystkie fiszki zostały ogarnięte ;)</string>
    <string name="flashcards_end_ratings">"Mam to: %1$d  ·  Coś świta: %2$d  ·  Pustka: %3$d"</string>
    <string name="flashcards_rating_good">Mam to</string>
    <string name="flashcards_rating_ok">Coś świta</string>
    <string name="flashcards_rating_bad">Pustka</string>
    <string name="flashcards_set_stats">"Do powtórki: %1$d  ·  Nowe: %2$d  ·  Utrwalone: %3$d"</string>
    <string name="flashcards_review_today">Dzisiejsza sesja</string>
    <string name="flashcards_sets_label">Zestawy</string>
    <plurals name="flashcards_review_today_counts">
        <item quantity="one">Masz do powtórki %d fiszkę</item>
        <item quantity="few">Masz do powtórki %d fiszki</item>
        <item quantity="many">Masz do powtórki %d fiszek</item>
        <item quantity="other">Masz do powtórki %d fiszki</item>
    </plurals>
    <plurals name="flashcards_review_today_new">
        <item quantity="one">(%d nowa)</item>
        <item quantity="few">(%d nowe)</item>
        <item quantity="many">(%d nowych)</item>
        <item quantity="other">(%d nowe)</item>
    </plurals>
    <string name="flashcards_review_today_done">Na dziś wszystko powtórzone :)</string>
    <string name="flashcards_new_paused">Nowe fiszki wstrzymane - do nadrobienia: %1$d</string>
    <string name="flashcards_level_mastered">★</string>
    <string name="flashcards_edit_progress_info">Postęp nauki zostaje, ale zmiana treści może wpłynąć na naukę</string>
    <string name="flashcards_removing_header">Usunąć zestaw fiszek?</string>
    <string name="flashcard_removing_header">Usunąć fiszkę?</string>
    <string name="flashcards_removing_content">Usunięte zostaną wszystkie jego fiszki. Tego nie da się cofnąć.</string>
    <string name="flashcards_removing_yes">Usuń zestaw</string>
    <string name="flashcard_removing_yes">Usuń fiszkę</string>
    <string name="workshop_section_onboarding">Moje poznawanie aplikacji</string>
    <string name="workshop_onboarding_section_home">Dom</string>
    <string name="workshop_onboarding_section_settings">Ustawienia</string>
    <string name="workshop_onboarding_section_capture">Łapanie myśli</string>
    <string name="workshop_onboarding_section_stream">Strumień</string>
    <string name="workshop_onboarding_section_details">Szczegóły myśli</string>
    <string name="workshop_onboarding_section_counter">%1$d/%2$d</string>
    <string name="workshop_dialog_reset_onboarding_title">Pokazać wskazówki od nowa?</string>
    <string name="workshop_dialog_reset_onboarding">Wszystkie wskazówki w tej sekcji pojawią się ponownie.</string>
    <string name="workshop_dialog_reset_onboarding_yes">Pokaż wskazówki</string>
    <string name="workshop_onboarding_no_thoughts">Najpierw złap jakąś myśl</string>
    <string name="home_title">Dom</string>
    <string name="home_capturing_button_title">Witaj w \"Domu\" :)</string>
    <string name="home_capturing_button_tooltip">Jak ci wpadnie coś do głowy co chcesz zapisać to tapnij w przycisk na środku</string>
    <string name="home_navigation_button_title">A tymczasem…</string>
    <string name="home_navigation_button_tooltip">Tapnij na ikonkę z kompasem (rym!), a potem na ikonkę koła zymbatego</string>
    <string name="home_build_version">ver %1$s</string>
    <string name="shortcut_new_flashcards">Twórz fiszki</string>
    <string name="shortcut_new_text">Złap notatkę</string>
    <string name="shortcut_new_voice">Złap głosówkę</string>
    <string name="shortcut_new_photo">Złap zdjęcie</string>
    <string name="capture_entry_title">Łapanie myśli</string>
    <string name="capture_entry_tooltip"><![CDATA[
        Czas na złapanie swojej pierwszej myśli! :)\n\n
        Guziorami u dołu z [+] możesz wybrać postać/formę zapisu myśli:\n
        tekst -> dźwięk -> zdjęcie
    ]]></string>
    <string name="capture_hex_tags_link_title">Skojarzenia lub Tagi dla myśli</string>
    <string name="capture_hex_tags_link_tooltip">Tapnij na puste pole u góry…</string>
    <string name="capture_hex_tags_title">Skojarzenia lub Tagi dla myśli</string>
    <string name="capture_hex_tags_onb_tooltip"><![CDATA[
        W tym polu możesz szybko dodać skojarzenia / tagi do myśli:\n
        ✓ osoba (znak @)\n
        ✓ projekt (znak #)\n
        ✓ temat (brak znaku)\n
    ]]></string>
    <string name="stream_title">Strumień myśli</string>
    <string name="settings_title">Ustawienia</string>
    <string name="settings_your_name_header">✒️ Moje Prawdziwe Imię?</string>
    <string name="settings_thoughts_value_header">⚖️ Skala wartości myśli</string>
    <string name="settings_thoughts_value_action_info">Zmiana skali może wymagać przeskalowania wartości wszystkich myśli</string>
    <string name="settings_thoughts_value_system_10">od 1 do 10</string>
    <string name="settings_thoughts_value_system_6">od 1 do 6</string>
    <string name="settings_domains_header">🌾 Moje Domeny</string>
    <string name="settings_backup_header">💾 Kopia zapasowa twoich myśli</string>
    <string name="settings_backup_hint">Wybierz i wczytaj plik kopii zapasowej z folderu Downloads/mind_shaper</string>
    <string name="settings_backup_select">Wybierz</string>
    <string name="settings_backup_load">Wczytaj</string>
    <string name="workshop_title">Warsztat</string>
    <string name="workshop_reminder_time_header">O tej godzinie</string>
    <string name="workshop_reminder_days_header">I w te dni</string>
    <string name="workshop_reminder_day_mon">Pon</string>
    <string name="workshop_reminder_day_tue">Wt</string>
    <string name="workshop_reminder_day_wed">Śr</string>
    <string name="workshop_reminder_day_thu">Czw</string>
    <string name="workshop_reminder_day_fri">Pt</string>
    <string name="workshop_reminder_day_sat">Sob</string>
    <string name="workshop_reminder_day_sun">Niedz</string>
</resources>