<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="90dp">

            <!-- Header -->
            <include layout="@layout/activity_header" />

            <!-- === YOUR NAME === -->
            <androidx.cardview.widget.CardView
                style="@style/AppCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_your_name_section_header"
                        style="@style/TextView_Header_Section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/settings_your_name_header" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="#FFAF7A"
                        app:hintTextColor="#FF8C42">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_your_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- === THOUGHTS === -->
            <androidx.cardview.widget.CardView
                style="@style/AppCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/TextView_Header_Section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/settings_thoughts_permissions_section" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/toggleRecording"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_thoughts_permissions_voice_recording" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_photo_feature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_thoughts_permissions_photo"
                        />

                    <TextView
                        android:id="@+id/tv_thought_value_scale_section"
                        style="@style/TextView_Header_Section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_thoughts_value_header" />

                    <TextView
                        style="@style/TextView_Info_Success"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/settings_thoughts_value_action_info" />

                    <RadioGroup
                        android:id="@+id/rg_values_system"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rb_system_6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_thoughts_value_system_6" />

                        <RadioButton
                            android:id="@+id/rb_system_10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_thoughts_value_system_10" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- === DOMAINS === -->
            <androidx.cardview.widget.CardView
                style="@style/AppCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_domains_section_header"
                        style="@style/TextView_Header_Section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/settings_domains_header" />

                    <GridLayout
                        android:id="@+id/gl_domains"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alignmentMode="alignBounds"
                        android:columnCount="2"
                        android:columnOrderPreserved="false"
                        android:rowCount="4" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- === BACKUP === -->
            <androidx.cardview.widget.CardView
                style="@style/AppCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_backup_section_header"
                        style="@style/TextView_Header_Section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/settings_backup_header" />

                    <TextView
                        style="@style/TextView_Info_Success"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_backup_hint" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_select_backup"
                            style="@style/SecondaryActionButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:text="@string/settings_backup_select" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_load_backup"
                            style="@style/SecondaryActionButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="8dp"
                            android:enabled="false"
                            android:text="@string/settings_backup_load" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_selected_backup"
                        style="@style/TextView_Info_Success"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/files_state_no_file_selected" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <!-- SAVE -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_save"
        android:contentDescription="@string/common_placeholder_accessibility_content_desc"
        app:backgroundTint="@color/button_primary_enabled_background"
        app:fabSize="normal"
        app:maxImageSize="32dp"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
